crates/djls-semantic/tests/snapshots/corpus__repos__django-oscar__src__oscar__templatetags__basket_tags.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "src.oscar.templatetags.basket_tags::tag::basket_form":
    arg_constraints:
      - Min: 3
      - Max: 4
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: request
        required: true
        kind: Variable
        position: 0
      - name: product
        required: true
        kind: Variable
        position: 1
      - name: quantity_type
        required: false
        kind: Variable
        position: 2
    as_var: strip
filter_arities: {}
block_specs: {}
