crates/djls-semantic/tests/snapshots/corpus__repos__django-oscar__src__oscar__templatetags__currency_filters.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules: {}
filter_arities:
  "src.oscar.templatetags.currency_filters::filter::currency":
    expects_arg: true
    arg_optional: true
block_specs: {}
