crates/djls-semantic/tests/snapshots/corpus__repos__django-oscar__src__oscar__templatetags__dashboard_tags.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "src.oscar.templatetags.dashboard_tags::tag::dashboard_navigation":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: user
        required: true
        kind: Variable
        position: 0
    as_var: strip
filter_arities: {}
block_specs: {}
