crates/djls-semantic/tests/snapshots/corpus__repos__django-oscar__src__oscar__templatetags__datetime_filters.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules: {}
filter_arities:
  "src.oscar.templatetags.datetime_filters::filter::timedelta":
    expects_arg: false
    arg_optional: false
block_specs: {}
