crates/djls-semantic/tests/snapshots/corpus__repos__django-oscar__src__oscar__templatetags__history_tags.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "src.oscar.templatetags.history_tags::tag::get_back_button":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    as_var: strip
  "src.oscar.templatetags.history_tags::tag::recently_viewed_products":
    arg_constraints:
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: current_product
        required: false
        kind: Variable
        position: 0
    as_var: keep
filter_arities: {}
block_specs: {}
