crates/djls-semantic/tests/snapshots/corpus__repos__django-oscar__src__oscar__templatetags__purchase_info_tags.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "src.oscar.templatetags.purchase_info_tags::tag::purchase_info_for_line":
    arg_constraints:
      - Min: 3
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: request
        required: true
        kind: Variable
        position: 0
      - name: line
        required: true
        kind: Variable
        position: 1
    as_var: strip
  "src.oscar.templatetags.purchase_info_tags::tag::purchase_info_for_product":
    arg_constraints:
      - Min: 3
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: request
        required: true
        kind: Variable
        position: 0
      - name: product
        required: true
        kind: Variable
        position: 1
    as_var: strip
filter_arities: {}
block_specs: {}
