crates/djls-semantic/tests/snapshots/corpus__repos__django-oscar__src__oscar__templatetags__reviews_tags.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules: {}
filter_arities:
  "src.oscar.templatetags.reviews_tags::filter::as_stars":
    expects_arg: false
    arg_optional: false
  "src.oscar.templatetags.reviews_tags::filter::is_review_permitted":
    expects_arg: true
    arg_optional: false
  "src.oscar.templatetags.reviews_tags::filter::may_vote":
    expects_arg: true
    arg_optional: false
block_specs: {}
