crates/djls-semantic/tests/snapshots/corpus__repos__django-oscar__src__oscar__templatetags__shipping_tags.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "src.oscar.templatetags.shipping_tags::tag::shipping_charge":
    arg_constraints:
      - Min: 3
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: method
        required: true
        kind: Variable
        position: 0
      - name: basket
        required: true
        kind: Variable
        position: 1
    as_var: strip
  "src.oscar.templatetags.shipping_tags::tag::shipping_charge_discount":
    arg_constraints:
      - Min: 3
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: method
        required: true
        kind: Variable
        position: 0
      - name: basket
        required: true
        kind: Variable
        position: 1
    as_var: strip
  "src.oscar.templatetags.shipping_tags::tag::shipping_charge_excl_discount":
    arg_constraints:
      - Min: 3
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: method
        required: true
        kind: Variable
        position: 0
      - name: basket
        required: true
        kind: Variable
        position: 1
    as_var: strip
filter_arities: {}
block_specs: {}
